sumo/tests/marouter/errors/false_options/false_output/errors.marouter
Error: Could not build output file 'xxxx/routes.rou.xml'.
Quitting (on error).
